Fix spacing

--- a/src/scss/components/_eventsapp.scss
+++ b/src/scss/components/_eventsapp.scss
@@ -601,7 +601,7 @@
         color: $color-medium-violet;
         font-size: 16px;
         line-height: 20px;
-        max-width: 350px;
+        max-width: 300px;
         margin: 40px auto;
       }
 
